[package]
name = "hexed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.17", features = ["derive"] }
eframe = "0.27.2"
egui = "0.27.2"
egui-file-dialog = "0.5.0"
notify = "6.1.1"
page_size = "0.6.0"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
shellexpand = "3.1.0"

# For profiling performance
# [profile.release]
# debug = 1
